# argx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.codesandbox/: tasks.json
.github/workflows/: build.yml
argparse_charged/: action.py  formatter.py  parser.py  type_.py  utils.py
argx/: __init__.py  action.py  formatter.py  parser.py  type_.py  utils.py
tests/: test_action.py  test_parser.py  test_type.py
tests/configs/: args.txt  config.toml  defaults.py  defaults.toml
