[tool.poetry]
name = "argx"
version = "0.2.14"
description = "Super-charged argparse for python"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.7"
python-simpleconf = "^0.6"

[tool.poetry.group.dev.dependencies]
pytest = [
    { version = "^7", python = ">=3.7,<3.8" },
    { version = "^8", python = "^3.8" },
]
pytest-cov = [
    { version = "^4", python = ">=3.7,<3.8" },
    { version = "^5", python = "^3.8" },
]
python-simpleconf = {version = "^0.6", extras = ["toml"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=argx --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    #"error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
